--- a/Assets/WebGLTemplates/ResponsiveVerticalLoading/index.html
+++ b/Assets/WebGLTemplates/ResponsiveVerticalLoading/index.html
@@ -12,8 +12,8 @@
 #endif
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <div id="unity-container" class="unity-desktop" width={{{ WIDTH }}} height={{{ HEIGHT }}} tabindex="-1" style="width: auto; height: 100vh; background: {{{ BACKGROUND_FILENAME ? 'url(\'Build/' + BACKGROUND_FILENAME.replace(/'/g, '%27') + '\') center / cover' : BACKGROUND_COLOR }}}; aspect-ratio: 9/19.5;">
-      <canvas id="unity-canvas" width=100% height=100% tabindex="-1"></canvas>
+    <div id="unity-container" class="unity-desktop" width={{{ WIDTH }}} height={{{ HEIGHT }}} style="width: auto; height: 100vh; background: {{{ BACKGROUND_FILENAME ? 'url(\'Build/' + BACKGROUND_FILENAME.replace(/'/g, '%27') + '\') center / cover' : BACKGROUND_COLOR }}}; aspect-ratio: 9/19.5;">
+      <canvas id="unity-canvas" width=100% height=100%></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -112,6 +112,10 @@
 #endif
 
       }
+	  else{
+		canvas.style.width = "100%";
+		canvas.style.height = "100%";
+	  }
 
 #if BACKGROUND_FILENAME
       canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
