--- a/Assets/WebGLTemplates/ResponsiveVerticalLoading/index.html
+++ b/Assets/WebGLTemplates/ResponsiveVerticalLoading/index.html
@@ -11,8 +11,8 @@
     <script src="<<<TemplateData/diagnostics.js>>>"></script>
 #endif
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <div id="unity-container" class="unity-desktop" width={{{ WIDTH }}} height={{{ HEIGHT }}} style="width: auto; height: 100vh; background: {{{ BACKGROUND_FILENAME ? 'url(\'Build/' + BACKGROUND_FILENAME.replace(/'/g, '%27') + '\') center / cover' : BACKGROUND_COLOR }}}; aspect-ratio: 9/19.5;">
+  <body>
+    <div id="unity-container" class="unity-desktop" width={{{ WIDTH }}} height={{{ HEIGHT }}} style="width: auto; height: window.innerHeight; background: {{{ BACKGROUND_FILENAME ? 'url(\'Build/' + BACKGROUND_FILENAME.replace(/'/g, '%27') + '\') center / cover' : BACKGROUND_COLOR }}}; aspect-ratio: 9/19.5;">
       <canvas id="unity-canvas" width=100% height=100%></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
@@ -101,6 +101,8 @@
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
+		
+		canvas.style.width = "100vw";
 
 #if SHOW_DIAGNOSTICS
         // position the diagnostics icon in the corner on the canvas
