Hopefully fixed bug where progress would not load on startup; Changed background color in WebGL template to default green

--- a/Assets/WebGLTemplates/ResponsiveVerticalLoading/index.html
+++ b/Assets/WebGLTemplates/ResponsiveVerticalLoading/index.html
@@ -119,6 +119,9 @@
 		canvas.style.height = "100%";
 	  }
 
+    // Background color of the loader
+    canvas.style.background = "#70BE5B";
+
 #if BACKGROUND_FILENAME
       canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
 #endif
